<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/teal_bg"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:id="@+id/first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_up"
        android:drawableStart="@drawable/ic_account_circle_white"
        android:hint="@string/enter_first_name"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:inputType="textCapSentences"
        />

    <EditText
        android:id="@+id/surname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_up"
        android:layout_alignParentEnd="true"
        android:hint="@string/enter_surname"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:inputType="textCapSentences"
        />

    <EditText
        android:id="@+id/email_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/first_name"
        android:drawableStart="@drawable/ic_email_white"
        android:hint="@string/enter_email_address"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:inputType="textEmailAddress"
        />

    <EditText
        android:id="@+id/birthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@id/email_address"
        android:hint="@string/enter_date_of_birth"
        android:textColorHint="@color/white"
        />

    <EditText
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@id/birthday"
        android:hint="@string/enter_phone_number"
        android:textColorHint="@color/white"
        android:inputType="phone"
        />

    <Spinner
        android:id="@+id/phone_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/birthday"
        android:layout_toEndOf="@id/phone"
        android:backgroundTint="@color/white"
        />


</RelativeLayout>